--- a/style.css
+++ b/style.css
@@ -140,16 +140,16 @@ p{
   padding-left:40px;
   direction:rtl;
   color:black;
-  font-size:30px;
-  font-family:'Jameel Noori Nastaleeq','Urdu';
+  font-size:20px;
+  font-family:'Rajdhani','Urdu';
   font-weight:400;
 }
 h2{
   padding-right:50px;
   direction:rtl;
   color:black;
-  font-size:40px;
-  font-family:'Jameel Noori Nastaleeq','Urdu';
+  font-size:30px;
+  font-family:'Rajdhani','Urdu';
   font-weight:400;
 }
 body{
@@ -157,7 +157,7 @@ body{
   background-color:rgb(71, 46, 50);
   color:black;
   font-size:20px;
-  font-family:'Jameel Noori Nastaleeq','Urdu';
+  font-family:'Rajdhani','Urdu';
   font-weight:400;
 }
 i{
@@ -165,13 +165,8 @@ i{
 }
 #box{
   background-color:white;
-  margin-top:10%;
-  margin-left:22%;
-  margin-right:22%;
-  border-radius:100px 20px;
-  border-top: solid 10px #a94442;
-  border-bottom: solid 10px #ba8557;
-
+  margin-left:10%;
+  margin-right:10%;
 }
 .my-btn{
     background: rgb(71, 46, 50);
@@ -189,8 +184,7 @@ button:hover {
   background: #3071A9
 }
 #author-box{
-  text-align:left;
-  padding-left:20px;
+  text-align:center;
   margin-top:20px;
   font-size:18px;
   font-style:normal;
